Fix overflow on connected blockquote index

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -559,7 +559,6 @@ body:not(.index):not(.about_index) {
     p, blockquote {
       font-size: 1rem;
       line-height: 1.4rem;
-      width: 100%;
     }
     figure {
       margin: 0;
